# mimick

./: .gitignore  Cargo.toml.bak  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json
Mimick/: package.json
Mimick/src/state/: store.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
