[package]
name = "voiceapp"
version = "0.1.0"
description = "VoiceApp scaffold (Wispr-style MVP)"
authors = ["You"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18.0"
thiserror = "1.0.61"
log = "0.4"
# rdev for raw key listening (Fn key handling on macOS)
rdev = "0.5.3"
# simple-logging for local logs
simplelog = "0.12.2"

[features]
default = []
